# pm

./: .dockerignore  Dockerfile  README.md  pm.db  pyproject.toml
backend/: AGENTS.md
backend/app/: ai.py  database.py  main.py  models.py
backend/tests/: test_ai.py  test_database.py  test_main.py
docs/: AI.md  DATABASE.md  PLAN.md
frontend/: AGENTS.md  next.config.ts
frontend/src/app/: globals.css
frontend/src/components/: AiSidebar.tsx  KanbanBoard.test.tsx  KanbanBoard.tsx  KanbanCard.tsx  KanbanColumn.tsx  LoginGate.test.tsx  LoginGate.tsx
frontend/src/lib/: api.ts
frontend/tests/: kanban.spec.ts
scripts/: AGENTS.md  Start-Windows.ps1  Stop-Windows.ps1  start-linux.sh  start-mac.sh  start-windows.bat  stop-mac.sh  stop-windows.bat
